--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-   
-     "dev": "nodemon app.js"
+    "dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +18,7 @@
     "nodemon": "^3.1.4",
     "npm": "^10.8.2",
     "request-ip": "^3.3.0",
-    "ua-parser-js": "^1.0.38"
+    "ua-parser-js": "^1.0.38",
+    "url-file-size": "^1.0.5-1"
   }
 }
